crates/paigasus-helikon-core/tests/ui/builder_missing_both.stderr
error[E0599]: no method named `build` found for struct `LlmAgentBuilder<(), (), String, NoName, NoModel>` in the current scope
 --> tests/ui/builder_missing_both.rs:7:39
  |
7 |     let _ = LlmAgent::builder::<()>().build();
  |                                       ^^^^^ method not found in `LlmAgentBuilder<(), (), String, NoName, NoModel>`
  |
  = note: the method was found for `LlmAgentBuilder<Ctx, M, T, HasName, HasModel>`
